test/cases/parser/GhostArgSyntax.errors
src/GhostArgSyntax.b:15:22: Syntax error (expected argument name)
